--- a/experimentos.tex
+++ b/experimentos.tex
@@ -5,7 +5,7 @@ e seus resultados.
 Na Seção \ref{prep}, é definido o subconjunto de estratégias mais relevantes
 para os experimentos.
 Nas demais seções é feita a demonstração de que as estratégias propostas SGmulti e
-agnóstica baseada em densidade (prefixo ATU) são competitivas.
+agnóstica baseada em densidade (prefixo ATU) são competitivas \ano{sg é competitiva?}.
 Adicionalmente, constatações relevantes para o problema da escolha de estratégias
 são fornecidas.
 A análise experimental é dividida em duas partes: \ano{rever}
@@ -35,7 +35,7 @@ As similaridades são apresentadas na Tabela \ref{passiveDists} de forma análoga 
 % as dimensões, depois faz decomposição ortogonal para visualizar em duas dimensões.
 % Depois ele faz agrupamento hierárquico.
 \begin{table}[h]
-\caption{Similaridade entre algoritmos de aprendizado de acordo com a acurácia balanceada.
+\caption{Similaridade entre algoritmos. Medida: acurácia balanceada.
 \textit{94 bases de dados.
 O maior e o menor valor de cada linha
 está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}}
@@ -95,7 +95,7 @@ Assim, a adoção dos algoritmos é mais representativa do que
 apenas um único algoritmo arbitrário.
 % \input classifsFried
 \begin{table}[h]
-\caption{\textbf{Um contra um e contagem de posições}.
+\caption{Um contra um e contagem de posições.
 Medida: acurácia balanceada.
 \textit{Cada asterisco/cruz/ponto indica quando o algoritmo na linha tem melhor
 desempenho que o algoritmo na coluna com intervalo de confiança de 0.99/0.95/0.90.}}
@@ -108,7 +108,7 @@ desempenho que o algoritmo na coluna com intervalo de confiança de 0.99/0.95/0.9
 4 - ELM         &   &   &   & - &   &   &   \\ \hline
 5 - NB          &   &   &   &   & - &   &   \\
 6 - RFw         & * & * & * & * & * & - &   \\ \hline
-7 - SVM         & + & + &   & * & + &   & - \\\end{tabular}
+7 - SVM         & . & + &   & * & + &   & - \\\end{tabular}
 \quad
 \begin{tabular}{lcc}
 algoritmo & \makecell{primeiros\\lugares} & \makecell{últimos\\lugares} \\
