--- a/stratsALCKappaFriedELMRedux.tex
+++ b/stratsALCKappaFriedELMRedux.tex
@@ -1,23 +1,18 @@
 \begin{table}[h]
 \caption{Um contra um (ELM). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
-\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|cc}
- 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & 15 & 16\\
-1 - Rnd  	& - &   &   &   &   &   &   &   &   &   &   &   &   &   &   & + \\
-2 - Clu  	&   & - &   &   &   &   &   &   &   &   &   &   &   &   &   & . \\ \hline
-3 - \textbf{ATUeuc}	&   &   & - &   &   &   &   & * &   &   &   &   &   &   &   & * \\
-4 - \textbf{ATUman}	&   &   &   & - &   &   &   & * &   &   &   &   &   &   &   & * \\ \hline
-5 - \textbf{ATUmah}	&   &   &   &   & - &   &   & * &   &   &   &   &   &   &   & * \\
-6 - Ent  	&   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   \\ \hline
-7 - Mar  	& * & * &   &   &   & * & - & * &   &   &   & * &   &   &   & * \\
-8 - DWeuc	&   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   \\ \hline
-9 - TUeuc	& * & * & + & . & + & * &   & * & - &   &   & * &   &   &   & * \\
-10 - TUman	& * & * & * & + & * & * &   & * &   & - &   & * &   &   &   & * \\ \hline
-11 - \textbf{SGmultic}	&   & . &   &   &   & + &   & * &   &   & - & + &   &   &   & * \\
-12 - EERacu	&   &   &   &   &   &   &   &   &   &   &   & - &   &   &   &   \\ \hline
-13 - EERent	& * & * &   &   &   & * &   & * &   &   &   & * & - &   &   & * \\
-14 - TUmah	& * & * &   &   &   & * &   & * &   &   &   & * &   & - &   & * \\ \hline
-15 - \textbf{GATUeuc}	&   & . &   &   &   & + &   & * &   &   &   & + &   &   & - & * \\
-16 - EMC  	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - \\ \hline\end{tabular}}
+\begin{center}\begin{tabular}{lcc|cc|cc|cc|c}
+ 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9\\
+1 - Rnd  	& - &   &   &   &   &   &   &   & + \\
+2 - Clu  	&   & - &   &   &   &   &   &   & + \\ \hline
+3 - \textbf{ATUmah}	&   &   & - &   &   &   &   &   & * \\
+4 - \textbf{GATUmah}	&   &   &   & - &   &   &   &   & * \\ \hline
+5 - \textbf{SGmulti}	& + & + &   &   & - &   &   &   & * \\
+6 - Mar  	& * & * & . &   &   & - &   &   & * \\ \hline
+7 - TUmah	& * & * & + &   &   &   & - &   & * \\
+8 - EERent	& * & * & + &   &   &   &   & - & * \\ \hline
+9 - EMC  	&   &   &   &   &   &   &   &   & - \\\end{tabular}
+\quad
+
 \label{stratsALCKappaFriedELMRedux}
 \end{center}
 \end{table}
